src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

:root {
	/* Dimensions */
	--max-width: 1180px;
	--tab-width: 400px;
	--nav-height: 2.7rem;
	--footer-spacer: 0.5rem;
	--auth-button-width: 160px;
	/* Fonts */
	--nav-font-size: 1.3rem;
	/* Default Colors */
	--electric-blue: #99ffff;
	--dark-black: black;
	--light-black: #111;
	--dark-grey: #222;
	--medium-grey: #333;
	--light-grey: #444;
	--white: #fff;
	--positive-green: green;
	--negative-red: red;
	/* Shadows */
	--shadow-thin: 0 0 2pt 1pt var(--electric-blue);
	--shadow-medium: 0 0 3pt 1pt var(--electric-blue);
	--shadow-thick: 0 0 3pt 2pt var(--electric-blue);
	--image-backlight: 0 0 4pt 1pt var(--light-grey);
}

@media (max-width: 420px) {
	:root {
		--tab-width: 95vw;
	}
}

html,
body {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	font-family: 'Roboto', sans-serif;
}

ul > li > a.nav-link-active {
	opacity: .8;
	color: var(--electric-blue);
}

/* Custom Sections */

.section {
	padding: 5rem 0;
	height: calc(100vh);
}
.section-center {
	width: 90vw;
	margin: 0 auto;
	max-width: var(--max-width);
}

.card-container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background-color: var(--dark-black);
	padding-bottom: var(--footer-spacer);
}

/* Custom Elements */

.lowpacity {
	font-size: 80%;
	opacity: .65;
}

.midpacity {
	opacity: .8;
}

.positive {
	color: var(--positive-green);
}
.negative {
	color: var(--negative-red);
}

.loading {
	background-color: var(--dark-black);
	width: 6rem;
	height: 6rem;
	margin: 0 auto;
	margin-top: 10rem;
	border-radius: 50%;
	border: 4px solid #ccc;
	border-top-color: var(--electric-blue);
	animation: spinner 0.6s linear infinite;
}

@media (min-width: 768px) {
	.section-center {
		width: 95vw;
	}
}

